@@ -1,7 +1,8 @@
     * Added has_IntOrUnknown in lib/Test/Run/Obj/IntOrUnknown/Moose.pm
     to abstract it.
-    * Added more test coverage:
-        - t/unit-format-self.t
+    * Added more test coverage.
+    * Changed the output to be more Test-Harness-3.x-like with spaces
+    surrounding the "...." leader (after the filename and before the OK).
 
 0.0120    Thu Aug  6 14:21:56 IDT 2009
     * Removed some trailing characters after the "=cut" of several
